--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ h2 {
 	width: 1100px;
 	height: 100px;
 	margin: 0 auto;
-  font-size: 18px;
+    font-size: 18px;
 	border-top: 1px solid #CBCBCB;
 }
 
@@ -189,4 +189,7 @@ h2 {
 #banner {
 	width: 1100px;
 	margin: 10px auto 0px auto;
+}
+.fijar {
+    margin-top: -135px !important; 
 }
